--- a/blog-template-stylesheet.css
+++ b/blog-template-stylesheet.css
@@ -3,8 +3,8 @@ header {
   background-color: #51ccad;
   color: #ffffff;
   text-align: center;
-  font-size: 40px;
-  font-weight: 500;
+  font-size: 25px;
+  font-weight: 400;
   line-height: 1.4;
   margin-top: -35px;
 
@@ -16,10 +16,12 @@ header p{
   font-size: 17px;
 }
 
-article, footer {
+article{
+  font-family: Corbel;
   margin-right: 12em;
   margin-left: 12em;
   font-color: #404040;
+  line-height: 120%;
 }
 
 body{
@@ -29,5 +31,22 @@ body{
   -background-size: cover;
 }
 
+img.medium {
+  max-width: 550px
+}
+
+dt {
+  font-weight: bold;
+  font-style: italic;
+}
+
+footer{
+  color: grey
+  font-style: italic;
+  font-size: .8em;
+  text-align: right;
+  margin-right: 150px;
+
+}
 
 
