--- a/blog-template-stylesheet.css
+++ b/blog-template-stylesheet.css
@@ -16,6 +16,12 @@ header p{
   font-size: 17px;
 }
 
+section{
+  margin-right: 12em;
+  margin-left: 12em;
+
+}
+
 article{
   font-family: Corbel;
   margin-right: 12em;
