--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,14 +25,15 @@ section li {
   margin: 1.25em;
 }
 
-a:link {
+section a:link {
+  text-decoration: none;
+  color: #003380;
+}
+
+section a:visited{
   text-decoration: none;
 }
 
-a:visited{
-  text-decoration: none;
-}
-
-a:hover {
+section a:hover {
   text-decoration: underline;
 }
