jQuery toggle for protfolio

--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -35,9 +35,23 @@ body{
   background-color: #e7e3d8;
   background-position: bottom;
   border: .1em solid #d6d6d6;
-
 }
 
+.fig-1 {
+  display: none;
+}
+
+.fig-2 {
+  display: none;
+}
+
+.fig-3 {
+  display: none;
+}
+
+.fig-4 {
+  display: none;
+}
 
 figure {
   display: block;
@@ -49,8 +63,8 @@ figure {
   text-align: center;
   font-family: 'Open Sans', Helvetica, Arial, sans-serif;
   color: #665544
-
 }
+
 
 article img{
   width: 19.6em;
