--- a/default.css
+++ b/default.css
@@ -1,3 +1,12 @@
+body{
+  background: url( imgs/paper.png) fixed repeat;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  -background-size: cover;
+  text-align: center;
+
+}
+
 nav {
   position: relative;
   margin: 20px 0;
