--- a/portfolio-popup/css/jquery.popdown.css
+++ b/portfolio-popup/css/jquery.popdown.css
@@ -9,7 +9,10 @@
 /* --------------------------------------------- */
 /* The dark transparent background */
 #popdown-opacity {
-  background: url(../img/blend-bg.png) repeat;
+/*  background: url(../img/blend-bg.png) repeat*/
+  /*background-color: rgba(0, 0, 0, 0.52);*/
+  background-color: rgba(56, 63, 88, 0.62);
+  /*background-color: rgba(63, 72, 102, 0.63);*/
 }
 /* The white dialog itself */
 #popdown-dialog {
@@ -17,6 +20,8 @@
   -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  text-align: left;
+
 }
 #popdown-dialog .body {
   padding: 30px;
@@ -38,9 +43,9 @@ div.popdown-content header h2 {
   margin: 0;
   padding: 0;
   background-color: #f0f0f0;
-  font-size: 16px;
-  text-align: left;
-  padding: 15px 10px;
+  font-size: 20px;
+  text-align: center;
+  padding: 15px;
   font-weight: 400;
   font-family: "Helvetica Neue", Helvetica, "pragmatica-web", Arial, sans-serif;
   color: #464646;
@@ -52,14 +57,19 @@ div.popdown-content section.body {
 div.popdown-content section.body h3 {
   margin: 0;
   padding: 0;
-  font-size: 18px;
+  font-size: 16px;
   color: #727272;
   font-family: "Helvetica Neue", Helvetica, "pragmatica-web", Arial, sans-serif;
 }
 div.popdown-content section.body p {
   font-size: 16px;
-  color: #B3B3B1;
+  color: #8A8A8A;
 }
+
+img#breadcrumbs-img {
+  width: 100%;
+}
+
 div.popdown-content footer {
   padding: 0px 20px 20px 0;
   text-align: right;
