--- a/portfolio-popup/css/jquery.popdown.css
+++ b/portfolio-popup/css/jquery.popdown.css
@@ -66,6 +66,11 @@ div.popdown-content section.body p {
   color: #8A8A8A;
 }
 
+div.popdown-content section.body li {
+  font-size: 16px;
+  color: #8A8A8A;
+}
+
 img#breadcrumbs-img {
   width: 100%;
 }
