--- a/default.css
+++ b/default.css
@@ -3,7 +3,7 @@ body{
   -moz-background-size: cover;
   -o-background-size: cover;
   -background-size: cover;
-  text-align: center;
+  text-align: left;
 
 }
 
@@ -29,6 +29,9 @@ nav li {
   text-align: center;
 }
 
+.pdfobject {
+  text-align: center;
+}
 
 
 nav a:link {
