--- a/default.css
+++ b/default.css
@@ -9,8 +9,8 @@ body{
 
 nav {
   position: relative;
-  margin: 20px 0;
-  padding-bottom: .1em;
+  margin: 1.25em 0;
+/*  padding-bottom: .1em;*/
 }
 
 nav ul{
@@ -22,10 +22,10 @@ nav.center ul {
 }
 
 nav li {
-  margin: 0 5px 10px 0;
+  margin: 0 .31em .31em 0;
   display: inline-block;
   list-style-type: none;
-  padding: 7px;
+  padding: .44em;
   text-align: center;
 }
 
